# AdinkraWorks

./: README.md  SimpleOutput.py  pyproject.toml
src-testing/: Adinkra.py  N=16_Genomics.pkl  SM10D.csv  SM4D.csv  SimpleApp.ui  SimpleOutput.py  VT4D.csv  __main__.py  newLib.pkl
src/media/videos/AdinkraWidget/480p15/partial_movie_files/SquareToCircle/: partial_movie_file_list.txt
tests/: SMw1.csv  SimpleApp.ui  __main__.py  yes.pkl
