[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Yerger",email = "gabeyerger@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyqt6 (>=6.8.1,<7.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "manim (>=0.19.0,<0.20.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "pyinstaller (>=6.12.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
